test/cli/test/deny-pod-delete/deny-pod-delete.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-pod-delete
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: deny-pod-delete
      match:
        any:
        - resources:
            kinds:
              - Pod
            operations:
              - DELETE
      validate:
        message: Pod cannot be deleted
        deny: {}
