test/cli/test/deny-pod-delete/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-delete
