test/cli/test/deny-pod-delete/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: deny-pod-delete
  resources:
  - name: test-pod-delete
    values:
      request.operation: DELETE
